--- a/ui.apps/src/main/content/jcr_root/apps/dashboard/components/content/button/button.html
+++ b/ui.apps/src/main/content/jcr_root/apps/dashboard/components/content/button/button.html
@@ -12,6 +12,6 @@
   font-size: 16px;
 }
 </style>
-<a href="http://localhost:4502/editor.html/content/aemnews/language-masters/en/landing.html"
+<a href="http://localhost:4502/content/dashboard/us/en/test.html"
    class="button">Show more articles</a>
 </html>
