with infinite scroll script

--- a/ui.apps/src/main/content/jcr_root/apps/dashboard/components/content/manualcard/manualcard.html
+++ b/ui.apps/src/main/content/jcr_root/apps/dashboard/components/content/manualcard/manualcard.html
@@ -16,6 +16,6 @@
 <div data-sly-use.manualcard="${'com.exadel.core.models.ManualCard'}"></div>
 <div>${manualcard.topic @ context='html'}</div>
 <div>${manualcard.article @ context='html'}</div>
-<div><a href=${manualcard.link} class="button">Read</a></div>
+<div><a href=${manualcard.link} class="button">Read</a>???</div>
 </html>
 
