--- a/ui.apps/src/main/content/jcr_root/apps/dashboard/components/page/customheaderlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/dashboard/components/page/customheaderlibs.html
@@ -1,4 +1,5 @@
 <sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html">
 	<sly data-sly-call="${clientlib.css @ categories='dashboard.page'}"/>
+	<sly data-sly-call="${clientlib.js @ categories='dashboard.page'}"/>
 </sly>
 
