--- a/ui.apps/src/main/content/jcr_root/apps/dashboard/components/page/clientlibs/css/main.css
+++ b/ui.apps/src/main/content/jcr_root/apps/dashboard/components/page/clientlibs/css/main.css
@@ -72,3 +72,17 @@ a.button {
   line-height: 75px;
   font-size: 30px;
 }
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 50%;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
