--- a/ui.apps/src/main/content/jcr_root/apps/dashboard/components/content/gridcomponent/gridcomponent.html
+++ b/ui.apps/src/main/content/jcr_root/apps/dashboard/components/content/gridcomponent/gridcomponent.html
@@ -2,7 +2,7 @@
      data-sly-list.card="${landing.getCards}">
     <div>
         <b>${card.topic @ context='html'}</b>
-        <p><img src="${card.image}" ></p>
+        <p><img src="${card.image}" width="350" height="300"></p>
         <i>${card.article @ context='html'}</i>
         <br>
         <a href="${card.link}" class="button">Read</a>
