--- a/ui.apps/src/main/content/jcr_root/apps/dashboard/components/page/body.html
+++ b/ui.apps/src/main/content/jcr_root/apps/dashboard/components/page/body.html
@@ -1,5 +1,11 @@
 <div class="topnav">
   <a class="active">NEWS</a>
+  <a> </a>
+  <form method="get">
+    <div class="search">
+      <input name="searchText" id="searchText" type="text" placeholder="text...">
+    </div>
+  </form>
 </div>
   <sly data-sly-use.templatedContainer="com.day.cq.wcm.foundation.TemplatedContainer"
        data-sly-repeat.child="${templatedContainer.structureResources}"
