--- a/ui.apps/src/main/content/jcr_root/apps/dashboard/components/page/body.html
+++ b/ui.apps/src/main/content/jcr_root/apps/dashboard/components/page/body.html
@@ -4,6 +4,11 @@
   <form method="get">
     <div class="search">
       <input name="searchText" id="searchText" type="text" placeholder="text...">
+      <label for="sortBy">sort by:</label>
+      <select name="sortBy" id="sortBy" class="custom-select">
+        <option value="byDate">date</option>
+        <option value="byTitle">title</option>
+      </select>
     </div>
   </form>
 </div>
