--- a/ui.apps/src/main/content/jcr_root/apps/dashboard/components/page/clientlibs/css/main.css
+++ b/ui.apps/src/main/content/jcr_root/apps/dashboard/components/page/clientlibs/css/main.css
@@ -103,3 +103,9 @@ a.button {
   display: inline-block;
   font-size: 12px;
 }
+
+.search label[for=sortBy]{
+  color:white;
+  font-weight: 600;
+  font-size: 20px;
+}
